@@ -45,23 +45,23 @@
         <maven-failsafe-plugin.version>3.0.0-M5</maven-failsafe-plugin.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
-        <maven-dependency-plugin.version>3.1.2</maven-dependency-plugin.version>
+        <maven-dependency-plugin.version>3.6.0</maven-dependency-plugin.version>
         <maven-install-plugin.version>3.0.0-M1</maven-install-plugin.version>
         <maven-plugin-plugin.version>3.6.0</maven-plugin-plugin.version>
         <maven-assembly-plugin.version>3.3.0</maven-assembly-plugin.version>
         <maven-enforcer-plugin.version>3.0.0-M3</maven-enforcer-plugin.version>
         <maven-scm-plugin.version>1.12.0</maven-scm-plugin.version>
         <!--Project dependencies-->
-        <spring.version>5.3.27</spring.version>
+        <spring.version>6.0.3</spring.version>
         <hamcrest.version>1.3</hamcrest.version>
-        <score.version>0.3.330</score.version>
+        <score.version>0.3.331-SNAPSHOT</score.version>
         <h2.version>2.1.214</h2.version>
         <!--Project properties-->
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <score.group>io.cloudslang</score.group>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <custom.nexus>overwritten_by_ci</custom.nexus>
     </properties>
 
@@ -308,6 +308,12 @@
                 <groupId>commons-lang</groupId>
                 <artifactId>commons-lang</artifactId>
                 <version>2.6</version>
+            </dependency>
+
+            <dependency>
+                <groupId>jakarta.annotation</groupId>
+                <artifactId>jakarta.annotation-api</artifactId>
+                <version>2.1.1</version>
             </dependency>
 
             <!-- spring artifacts -->
@@ -581,8 +587,19 @@
                             </goals>
                             <configuration>
                                 <failOnWarning>true</failOnWarning>
+                                <ignoredNonTestScopedDependencies combine.children="append">
+                                    <ignoredNonTestScopedDependency>org.springframework:spring-beans:jar:${spring.version}</ignoredNonTestScopedDependency>
+                                    <ignoredNonTestScopedDependency>io.cloudslang:dependency-management-api:jar:${score.version}</ignoredNonTestScopedDependency>
+                                    <ignoredNonTestScopedDependency>io.cloudslang:dependency-management-impl:jar:${score.version}</ignoredNonTestScopedDependency>
+                                    <ignoredNonTestScopedDependency>io.cloudslang.lang:cloudslang-spi:jar:${version}</ignoredNonTestScopedDependency>
+                                    <ignoredNonTestScopedDependency>org.hamcrest:hamcrest-all:jar:*</ignoredNonTestScopedDependency>
+                                    <ignoredNonTestScopedDependency>commons-collections:commons-collections:jar:*</ignoredNonTestScopedDependency>
+                                    <ignoredNonTestScopedDependency>org.powermock:powermock-core:jar:*</ignoredNonTestScopedDependency>
+                                    <ignoredNonTestScopedDependency>org.python:jython-standalone:jar:*</ignoredNonTestScopedDependency>
+                                </ignoredNonTestScopedDependencies>
                                 <!--For detection of used undeclared dependencies currently everything here is ignore because of existing issue to not fail the build now.-->
                                 <ignoredUsedUndeclaredDependencies combine.children="append">
+                                    <ignoredUsedUndeclaredDependency>jakarta.annotation:jakarta.annotation-api:jar:*</ignoredUsedUndeclaredDependency>
                                 </ignoredUsedUndeclaredDependencies>
 
                                 <ignoredUnusedDeclaredDependencies combine.children="append">
@@ -593,7 +610,7 @@
                                     <ignoredUnusedDeclaredDependency>com.h2database:h2:jar:${h2.version}
                                     </ignoredUnusedDeclaredDependency>
 
-                                    <ignoredUnusedDeclaredDependency>org.python:jython-standalone:jar:2.7.2
+                                    <ignoredUnusedDeclaredDependency>org.python:jython-standalone:jar:*
                                     </ignoredUnusedDeclaredDependency>
                                     <ignoredUnusedDeclaredDependency>org.liquibase:liquibase-core:jar:4.9.0
                                     </ignoredUnusedDeclaredDependency>
@@ -709,7 +726,12 @@
                     <version>${maven-surefire-plugin.version}</version>
                     <configuration>
                         <runOrder>alphabetical</runOrder>
-                        <argLine>-Xmx512m -XX:MaxPermSize=1024m</argLine>
+                        <argLine>
+                            -Xmx512m
+                            --add-opens java.base/java.lang=ALL-UNNAMED
+                            --add-opens java.base/java.io=ALL-UNNAMED
+                            --add-opens java.base/java.net=ALL-UNNAMED
+                        </argLine>
                     </configuration>
                 </plugin>
                 <plugin>
